--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
+@import "styles/fonts/fonts.css";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.full_app{
+  background-color: #eeeddd;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-self: center;
+}
+.App{
+  color:#393e46;
+  margin:0% 12%;
+}
+.header_title{
+  font-family: MoskBold700;
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+  font-size: 45px;
+  font-weight: bolder;
+  color: #eeb916;
+  text-decoration: underline;
+  //border: #2cb1cb solid 4px;
+  //border-radius: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* sytyling the scrolle bar */
+
+/* For WebKit-based browsers */
+::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar track */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the thumb */
+  border-radius: 4px; /* Rounded corners on the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the thumb on hover */
+}
+
+/* For Firefox and other browsers */
+body {
+  scrollbar-width: thin; /* Width of the scrollbar track */
+  scrollbar-color: #f1f1f1 #888; /* Color of the thumb and track */
+}
+
+/* Style for the thumb on hover (if supported) */
+body::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
