--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,8 @@
   margin: 20px;
   font-size: 45px;
   font-weight: bolder;
-  color: #eeb916;
-  text-decoration: underline 10px dotted #eeb916;
- /*border: #2cb1cb solid 4px;
-  border-radius: 25px;*/
+  color: #927307;
+
 }
 
 
